--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Eyes that watch you</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-  <style></style>
 
   <body>
     <div class="eyes">
@@ -22,6 +21,9 @@
     <p>Woooooo.... this is spooky, also quite useful, and sometimes reassuring. 
         Call me.  Maybe.  
       </p> 
+<div id="homebutton">
+<button class="homebutton">Back to HOME</button>
+</div>
   </body>
   <script src="eyes.js"></script>
 </html>
