--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Call me.  Maybe.  
       </p> 
 <div id="homebutton">
-<button class="homebutton">Back to HOME</button>
+<button class="homebutton" onclick="window.location.href='https://thedrawers.io';">Back to HOME</button>
 </div>
   </body>
   <script src="eyes.js"></script>
